chore#27: check if user is DRep on-chain